<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.gmt_351.MainActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="409dp"
        android:layout_height="105dp"
        android:fontFamily="@font/el_messiri"
        android:gravity="center"
        android:text="@string/profile"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.043" />

    <TextView
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:fontFamily="@font/el_messiri"
        android:padding="10dp"
        android:text="@string/id"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.303" />

    <TextView
        android:id="@+id/textViewId"
        android:layout_width="217dp"
        android:layout_height="50dp"
        android:fontFamily="@font/el_messiri"
        android:padding="10dp"
        android:text="@string/id"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.809"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.302" />

    <TextView
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:fontFamily="@font/el_messiri"
        android:padding="10dp"
        android:text="@string/mail"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.375" />

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="217dp"
        android:layout_height="50dp"
        android:fontFamily="@font/el_messiri"
        android:padding="10dp"
        android:text="@string/mail"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.809"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.375" />

    <Button
        android:id="@+id/buttonLogout"
        android:layout_width="206dp"
        android:layout_height="wrap_content"
        android:background="@drawable/login_button"
        android:fontFamily="@font/el_messiri"
        android:text="@string/logout"
        android:textColor="#94D637"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8" />

    <TextView
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:fontFamily="@font/el_messiri"
        android:padding="10dp"
        android:text="@string/user_name"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.449" />

    <TextView
        android:id="@+id/textViewUsername"
        android:layout_width="217dp"
        android:layout_height="50dp"
        android:fontFamily="@font/el_messiri"
        android:padding="10dp"
        android:text="@string/user_name"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.809"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.449" />

    <TextView
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:fontFamily="@font/el_messiri"
        android:padding="10dp"
        android:text="@string/gender"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.522" />

    <TextView
        android:id="@+id/textViewGender"
        android:layout_width="217dp"
        android:layout_height="50dp"
        android:fontFamily="@font/el_messiri"
        android:padding="10dp"
        android:text="@string/gender"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.809"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.522" />


</androidx.constraintlayout.widget.ConstraintLayout>