<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button"
        android:layout_width="123dp"
        android:layout_height="56dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/login_button"
        android:fontFamily="@font/el_messiri"
        android:text="@string/my_profile"
        android:textColor="#94D637"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <Button
        android:id="@+id/buttonSelect"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/login_button"
        android:fontFamily="@font/el_messiri"
        android:text="@string/string_choose_file"
        android:textColor="#FF7043"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19999999" />

    <Button
        android:id="@+id/buttonUpload"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/login_button"
        android:fontFamily="@font/el_messiri"
        android:text="@string/string_upload_image"
        android:textColor="#FF7043"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <EditText
        android:id="@+id/editTextImageName"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonUpload"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/el_messiri"
        android:gravity="center"
        android:hint="@string/img_view"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.841" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="380dp"
        android:layout_height="350dp"
        android:layout_above="@+id/editTextImageName"
        android:layout_below="@+id/buttonSelect"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/img_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.543"
        app:srcCompat="@drawable/web_hi_res_512" />


</androidx.constraintlayout.widget.ConstraintLayout>